Correct some broken grammar / spelling / syntax / etc.
See https://duckduckgo.com/?q=english+grammar&ia=web ;
https://duckduckgo.com/?q=english+spelling&ia=web and for the lighter side:

* https://www.youtube.com/watch?v=8Gv0H-vPoDc

* https://shlomif.livejournal.com/53966.html

* http://i.imgur.com/HL1ZR.jpg .

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,11 +1,11 @@
-Captioned Image - "One does not simply cast an American actress for a Britishwoman role."
+Captioned Image - "One does not simply cast an American actress for a Britishwoman’s role."
 =========================================================================================
 
 [id="preview"]
 Preview:
 --------
 
-image::./one-does-not-simply-cast-an-american-actress.svg.webp[One does not simply cast an American actress for a Britishwoman role.]
+image::./one-does-not-simply-cast-an-american-actress.svg.webp[One does not simply cast an American actress for a Britishwoman’s role.]
 
 [id="about"]
 About:
